--- a/JiaoBaoYun-hb/html/homework/homework-tea.html
+++ b/JiaoBaoYun-hb/html/homework/homework-tea.html
@@ -34,33 +34,7 @@
 		<!--公共事件方法库-->
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
-		<script src="../../js/homework/homework-sub.js"></script>
-		<script type="text/javascript">
-			//加载子页面
-			events.initSubPage('homework-tea-sub.html')
-			mui.plusReady(function(){
-				var role=2;
-				mui('.mui-scrollbar-horizontal').scroll();
-				//三道杠的点击事件
-				events.addTap('more',function(){
-					//通知子页面，显示、关闭菜单 
-					events.fireToPageNone('homework-tea-sub.html','togglePop');
-				})
-				events.addTap('icon-camero',function(){
-					events.openNewWindow('publish-answer.html');
-				})
-				var btn_published=document.getElementById('btn-published');
-				var btn_homework=document.getElementById('btn-homework');
-				btn_published.addEventListener('tap',function(){
-					btn_published.className='mui-btn mui-btn-green'
-					btn_homework.className='mui-btn mui-btn-green mui-btn-outlined'
-				});
-				btn_homework.addEventListener('tap',function(){
-					btn_published.className='mui-btn mui-btn-green mui-btn-outlined';
-					btn_homework.className='mui-btn mui-btn-green';
-				})
-			})
-		</script>
+		<script src="../../js/homework/homework.js"></script>
 	</body>
 
 </html>
