--- a/JiaoBaoYun-hb/html/cloud/storage_main.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main.html
@@ -15,11 +15,21 @@
 		<link rel="stylesheet" href="../../css/mui.min.css">
 		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
+		<link rel="stylesheet" href="../../css/cloud/file.css" />
 		<script src="../../js/mui.min.js"></script>
+		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
+		<script type="text/javascript" src="../../js/utils/events.js"></script>
 		<style>
 			.iconfont {
-				line-height: 45px;
-				color: #333333;
+				line-height: 42px;
+			}
+
+			.iconfont-color {
+				color: #8f8f94;
+			}
+
+			.iconfont-size {
+				font-size: 42px;
 			}
 			/*.mui-bar-nav~ .mui-content .mui-pull-top-pocket {
 				top: 90px !important;
@@ -27,60 +37,69 @@
 
 			body,
 			.mui-content {
+				/*background: white;*/
+			}
+
+			.mui-table-view:before,
+			.mui-table-view:after,
+			.mui-table-view-cell:after {
+				height: 0px;
+			}
+
+			.mui-table-view {
+				background: transparent;
+			}
+
+			.mui-table-view-cell {
+				margin-top: 10px;
 				background: white;
+			}
+
+			.mui-scroll-wrapper {
+				top: 90px;
 			}
 		</style>
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<a id="back" class="mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<p class="mui-title common-color-white" style="text-align: left;">云盘—云存储</p>
 		</header>
 		<div class="mui-content">
 			<div style="background-color: white;text-align: center;height: 45px;">
-				<span class="mui-icon iconfont icon-upload mui-pull-left" style="margin-left: 15px;"> 上传</span>
-				<span class="mui-icon iconfont icon-chuanshu"> 传输列表</span>
-				<span id="addfolder" class="mui-icon iconfont icon-newfolder mui-pull-right" style="margin-right: 15px;"> 文件夹</span>
-				<div style="height: 1px;width: 100%;background: black;"></div>
+				<span class="mui-icon iconfont iconfont-color icon-upload mui-pull-left" style="margin-left: 15px;"> 上传</span>
+				<span class="mui-icon iconfont iconfont-color icon-chuanshu"> 传输列表</span>
+				<span id="addfolder" class="mui-icon iconfont iconfont-color icon-newfolder mui-pull-right" style="margin-right: 15px;"> 文件夹</span>
+				<!--<div style="height: 1px;width: 100%;background: black;"></div>-->
 			</div>
 			<div id="all">
-				<div id="fid" style="display: inline;">
-					<div class="mui-scroll-wrapper" style="top: 90px;">
+				<!--<div id="fid_fid" style="display: ;">
+					<div class="mui-scroll-wrapper">
 						<div class="mui-scroll">
-							<ul class="mui-table-view">
+							<ul id="ul_fid" class="mui-table-view">
 								<li class="mui-table-view-cell mui-media">
-									<a href="javascript:;">
-										<img class="mui-media-object mui-pull-left" src="http://placehold.it/40x30">
-										<div class="mui-media-body">
-											幸福
-											<p class="mui-ellipsis">能和心爱的人一起睡觉，是件幸福的事情；可是，打呼噜怎么办？</p>
-										</div>
-									</a>
+									<span class="mui-navigate-right mui-media-object mui-pull-right"></span>
+									<span class="mui-icon iconfont iconfont-color icon-trash mui-media-object mui-pull-right" style="margin-right: 15px;"></span>
+									<span class="mui-icon iconfont iconfont-color icon-download mui-media-object mui-pull-right" style="margin-right: 15px;"></span>
+									<img class="mui-media-object mui-pull-left" src="../../image/cloud/A_folder.png">
+									<div class="mui-media-body">
+										<p class="mui-ellipsis">文件夹名字</p>
+									</div>
 								</li>
 								<li class="mui-table-view-cell mui-media">
-									<a href="javascript:;">
-										<img class="mui-media-object mui-pull-left" src="http://placehold.it/40x30">
-										<div class="mui-media-body">
-											木屋
-											<p class="mui-ellipsis">想要这样一间小木屋，夏天挫冰吃瓜，冬天围炉取暖.</p>
-										</div>
-									</a>
-								</li>
-								<li class="mui-table-view-cell mui-media">
-									<a href="javascript:;">
-										<img class="mui-media-object mui-pull-left" src="http://placehold.it/40x30">
-										<div class="mui-media-body">
-											CBD
-											<p class="mui-ellipsis">烤炉模式的城，到黄昏，如同打翻的调色盘一般.</p>
-										</div>
-									</a>
+									<span class="mui-media-object mui-pull-right"></span>
+									<span class="mui-icon iconfont iconfont-color icon-trash mui-media-object mui-pull-right" style="margin-right: 15px;"></span>
+									<span class="mui-icon iconfont iconfont-color icon-download mui-media-object mui-pull-right" style="margin-right: 15px;"></span>
+									<span class="mui-media-object mui-icon iconfont iconfont-size icon-excel mui-pull-left"></span>
+									<div class="mui-media-body">
+										<p class="mui-ellipsis">文件名字</p>
+									</div>
 								</li>
 							</ul>
 						</div>
 					</div>
-
-				</div>
+				</div>-->
 			</div>
 		</div>
 		</div>
@@ -100,8 +119,8 @@
 		});
 
 		mui.plusReady(function() {
-			var path = [];
-			path.push('云盘—云存储');
+			//			var path = [];
+			//			path.push('云盘—云存储');
 
 			//---从父页面获取数据---start---
 			var main = plus.webview.currentWebview(); //获取当前窗体对象
@@ -113,7 +132,44 @@
 			console.log('subData:' + JSON.stringify(subData));
 			//---从父页面获取数据---end---
 
-			//下载，增加文件夹的监听
+			//---初始化---start---
+			var allData = []; //记录所有的文件和文件夹
+			var showPid = ''; //当前展示的界面的父id
+			var showPidList = []; //记录打开的文件夹历史
+			addbot('0'); //增加空的顶层文件夹
+			var fData = {
+				pid: '0', //上层id
+				fdata: subData.top //本层数据
+			}
+			allData.push(fData);
+			mui.each(subData.top, function(index, item) {
+				additem(item);
+			});
+
+			if(subData.fid == '0') {
+				document.getElementById("pid_0").style.display = 'inline';
+			} else {
+				//所需参数
+				var comData = {
+					vvl: subData.fid //	节点ID，顶层为0
+				};
+				//请求数据
+				requestData(comData);
+			}
+
+			//---初始化---end---
+
+			//---滑动start---
+			mui(".mui-scroll-wrapper").scroll({
+				scrollY: true, //是否竖向滚动
+				scrollX: false, //是否横向滚动
+				indicators: true, //是否显示滚动条
+				deceleration: 0.0006, //阻尼系数,系数越小滑动越灵敏
+				bounce: true, //是否启用回弹
+			});
+			//---滑动end---
+
+			//增加文件夹的监听
 			document.getElementById('addfolder').addEventListener('tap', function(e) {
 				e.detail.gesture.preventDefault(); //修复iOS 8.x平台存在的bug，使用plus.nativeUI.prompt会造成输入法闪一下又没了
 				var btnArray = ['取消', '确定'];
@@ -121,7 +177,7 @@
 					if(e.index == 1) {
 						//点击确定
 						console.log(e.value);
-						if(e.value == '') {
+						if(e.value.replace(/(^\s*)|(\s*$)/g, "") == "") {
 							mui.toast('文件夹名字不能为空');
 						} else {
 							//向服务器发送数据并获得成功的回调
@@ -138,32 +194,130 @@
 				});
 			});
 
-			//返回上一级
-			mui('.mui-bar-nav').on('tap', '.mui-icon-left-nav', function() {
-				path.pop();
-				if(path.length == 0) {
-					mui.back();
+			document.getElementById('back').addEventListener('tap', function() {
+				mui.back();
+			});
+
+			//			//返回上一级
+			//			mui('.mui-bar-nav').on('tap', '.mui-icon-left-nav', function() {
+			//				path.pop();
+			//				if(path.length == 0) {
+			//					mui.back();
+			//				} else {
+			//					var title = document.body.querySelector('.mui-title');
+			//					console.log(path[path.length - 1]);
+			//					title.innerHTML = path[path.length - 1];
+			//					var tab = plus.webview.getWebviewById('storage_sub.html');
+			//					mui.fire(tab, "comeBack", {
+			//						path: path[path.length - 1]
+			//					});
+			//				}
+			//			});
+
+			//			//打开新文件夹
+			//			window.addEventListener("addPath", function(e) {
+			//				//获得事件参数
+			//				var getPath = e.detail.path;
+			//				path.push(getPath);
+			//				var title = document.body.querySelector('.mui-title');
+			//				title.innerHTML = getPath;
+			//			});
+
+			/**
+			 * 新增一个空的文件夹
+			 * @param {Object} pid 父id
+			 */
+			function addbot(pid) {
+				console.log('addbot:' + JSON.stringify(pid));
+				var div = document.createElement('div');
+				div.setAttribute('id', 'pid_' + pid);
+				div.innerHTML = '<div class="mui-scroll-wrapper">\
+									<div class="mui-scroll">\
+										<ul id="ul_' + pid + '" class="mui-table-view">\
+										</ul>\
+									</div>\
+								</div>';
+				div.style.display = 'none';
+				document.getElementById("all").appendChild(div);
+			}
+
+			/**
+			 * 新增一个文件或文件夹
+			 * @param {Object} data
+			 */
+			function additem(data) {
+				console.log('additem:' + JSON.stringify(data))
+				var li = document.createElement('li');
+				li.className = 'mui-table-view-cell mui-media';
+				//文件夹右侧箭头
+				var html1 = '';
+				//删除和下载按钮
+				var html2 = '<span class="mui-icon iconfont iconfont-color icon-trash mui-media-object mui-pull-right" style="margin-right: 15px;"></span>\
+							 <span class="mui-icon iconfont iconfont-color icon-download mui-media-object mui-pull-right" style="margin-right: 15px;"></span>';
+
+				//文件或文件图标
+				var html3 = '';
+				if(data.ftype == '.file') { //文件夹
+					html1 = '<span class="mui-navigate-right mui-media-object mui-pull-right"></span>';
+					html3 = '<img class="mui-media-object mui-pull-left" src="../../image/cloud/A_folder.png">';
 				} else {
-					var title = document.body.querySelector('.mui-title');
-					console.log(path[path.length - 1]);
-					title.innerHTML = path[path.length - 1];
-					var tab = plus.webview.getWebviewById('storage_sub.html');
-					mui.fire(tab, "comeBack", {
-						path: path[path.length - 1]
-					});
+					html1 = '<span class="mui-media-object mui-pull-right"></span>';
+					var type = cloud.classify(data.ftype);
+					if(type != '') {
+						html3 = '<span class="mui-media-object mui-icon iconfont iconfont-size ' + type + ' mui-pull-left"></span>';
+					} else { //七牛能生成缩略图的图片或视频
+						html3 = '<img class="cloud-bottom-imge" src="' + data.fpath + '" />';
+					}
 				}
-			});
 
-			//打开新文件夹
-			window.addEventListener("addPath", function(e) {
-				//获得事件参数
-				var getPath = e.detail.path;
-				path.push(getPath);
-				var title = document.body.querySelector('.mui-title');
-				title.innerHTML = getPath;
-			});
+				//文件名或文件夹名字
+				var html4 = '<div class="mui-media-body">\
+								<p class="mui-ellipsis">' + data.fname + '</p>\
+							</div>';
+				li.innerHTML = html1 + html2 + html3 + html4;
+				document.getElementById("ul_" + data.pid).appendChild(li)
+			}
 
-		})
+			//请求数据
+			function requestData(comData) {
+				//所需参数
+				//var comData = {
+				//	vvl: '1' //	节点ID，顶层为0
+				//};
+				// 等待的对话框
+				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+				//26.用户云盘顶层文件及文件夹获取
+				postDataPro_PostDiFi(comData, wd, function(data) {
+					wd.close();
+					console.log('26.postDataPro_PostDiFi用户云盘顶层文件及文件夹获取:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+					if(data.RspCode == 0 || data.RspCode == 9) {
+						if(data.RspCode == 9) {
+							mui.toast('文件夹为空');
+						}
+						var tempRspData = [];
+						if(data.RspData != null && data.RspData != '') {
+							tempRspData = data.RspData.Data;
+						}
+						var pid = comData.vvl;
+						if(document.getElementById("pid_" + pid) == null) {
+							console.log('pid_' + pid + '==null');
+							addbot(pid); //增加对应的文件夹
+							var fData2 = {
+								pid: pid, //上层id
+								fdata: tempRspData //本层数据
+							}
+							allData.push(fData2);
+						} else {
+							console.log('pid_' + pid + '!=null');
+						}
+						document.getElementById("pid_" + pid).style.display = 'inline';
+					} else {
+						mui.toast(data.RspTxt);
+					}
+				});
+			}
+
+		});
 	</script>
 
 </html>
