--- a/JiaoBaoYun-hb/html/mine/qun_data_create.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_create.html
@@ -17,7 +17,7 @@
 		<script src="../../js/mui.min.js"></script>
 		<!--<script type="text/javascript" src="../../js/mui.picker.min.js"></script>-->
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
-		<script type="text/javascript" src="../../js/utils/events.js" ></script>
+		<script type="text/javascript" src="../../js/utils/events.js"></script>
 		<style>
 			body,
 			.mui-content {
@@ -92,7 +92,7 @@
 						<li class="mui-table-view-cell">
 							<div class="mui-input-row">
 								<label>学生电话:</label>
-								<input type="text" class="mui-input-clear">
+								<input type="text" class="mui-input-clear" disabled="disabled">
 							</div>
 						</li>
 						<li class="mui-table-view-cell">
