作业主界面大体框架

--- a/JiaoBaoYun-hb/html/homework/homework-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/homework-tea-sub.html
@@ -29,7 +29,7 @@
 
 			    </div>
 			</div>
-			<img id="tempDetail" src="../../image/homework/other.png" />
+			<!--<img id="tempDetail" src="../../image/homework/other.png" />-->
 	    </div>
 		<!--下拉刷新容器-->
 		<!--<div id="refreshContainer" class="mui-scroll-wrapper">-->
@@ -48,7 +48,7 @@
 		<script src="../../js/publicHomeworkProtocol.js"></script>
 		<!--h5下拉刷新-->
 		<script src="../../js/utils/h5fresh.js"></script>
-		<script src="../../js/homework/homework-tea.js"></script>
+		<script src="../../js/homework/homework-sub.js"></script>
 	</body>
 
 </html>
