云盘文件夹之间的跳转

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -26,12 +26,12 @@
 				background-size: 100%;
 				/*宽度占100%*/
 			}
-			
+
 			.cloud-info {
 				/*顶部信息*/
 				padding: 10px;
 			}
-			
+
 			#cloud_prsonalimge {
 				/*个人头像*/
 				border-radius: 50%;
@@ -41,19 +41,19 @@
 				float: right;
 				margin-right: 10px;
 			}
-			
+
 			#cloud_name {
 				/*名字*/
 				color: white;
 				margin-bottom: 5px;
 			}
-			
+
 			.cloud-top-icon {
 				/*图标*/
 				width: 20px;
 				height: 20px;
 			}
-			
+
 			#gift,
 			#yuan {
 				/*积分和钱*/
@@ -62,7 +62,7 @@
 				font-weight: 900;
 				margin-left: 5px;
 			}
-			
+
 			.mui-progressbar {
 				/*进度条*/
 				margin-top: 5px;
@@ -70,41 +70,41 @@
 				height: 10px;
 				width: 70%;
 			}
-			
+
 			.cloud-capacity {
 				/*容量*/
 				margin-top: 3px;
 				color: white;
 			}
-			
+
 			.mui-table-view:before,
 			.mui-table-view:after,
 			.mui-table-view-cell:after {
 				height: 0px;
 			}
-			
+
 			.mui-table-view {
 				background: transparent;
 				min-height: 90px;
 			}
-			
+
 			.mui-table-view-cell {
 				background: white;
 			}
-			
+
 			.cloud-bottom-imge {
 				/*云存储的文件夹图片*/
 				height: 40px;
 				width: 50px;
 			}
-			
+
 			.cloud-bottom-imge2 {
 				/*云档案，云应用的图片*/
 				height: 50px;
 				width: 50px;
 				/*margin-top: 10px;*/
 			}
-			
+
 			.cloud-bottom-imge2-bg {
 				/*云档案，云应用的图片背景*/
 				height: 50px;
@@ -112,17 +112,17 @@
 				border-radius: 50%;
 				margin: auto;
 			}
-			
+
 			.cloud-bottom-icon {
 				/*云存储右侧按钮*/
 				height: 20px;
 				width: 20px;
 			}
-			
+
 			.cloud-text-align-center {
 				text-align: center;
 			}
-			
+
 			.cloud-line {
 				/*功能名字右侧树竖线*/
 				position: absolute;
@@ -132,7 +132,7 @@
 				background: #A9A9A9;
 				height: 50px;
 			}
-			
+
 			#cloudstorage {
 				background-color: white;
 				padding: 10px;
@@ -141,7 +141,7 @@
 				padding-top: 7px;
 				padding-bottom: 7px;
 			}
-			
+
 			#cloudrecord,
 			#cloudapps {
 				background: white;
@@ -151,11 +151,11 @@
 				padding-top: 10px;
 				padding-bottom: 10px;
 			}
-			
+
 			.mui-progressbar {
 				border-radius: 5px;
 			}
-			
+
 			.iconfont {
 				font-size: 45px;
 			}
@@ -304,7 +304,7 @@
 			var fileArray = [];
 
 			mui.plusReady(function() {
-				events.preload("../homework/homework-tea.html",300);
+				events.preload("../homework/homework-tea.html", 300);
 				//初始化滚动条
 				mui('.mui-scroll-wrapper').scroll({
 					indicators: true, //是否显示滚动条
@@ -344,20 +344,30 @@
 				//云存储显示的文件
 				mui('#cloudstorage').on('tap', '.cloud-text-align-center', function() {
 					console.log('tap:' + this.getAttribute("data-fid"));
+					var fid = this.getAttribute("data-fid"); //文件id
+					var title = '';
 					mui.each(fileArray, function(index, item) {
 						console.log('fileArray:' + index + '|' + JSON.stringify(item));
+						if(fid == item.fid) {
+							title = item.fname;
+							return false;
+						}
 					});
 					events.openNewWindowWithData('storage_main.html', {
-						fid: this.getAttribute("data-fid"), //fid
+						fid: fid, //文件id
+						title: title, //标题名
 						top: fileArray //顶层文件和文件夹的数据
+
 					});
 				});
 
 				//云存储右侧按钮
 				mui('#cloudstorage').on('tap', '.cloud-bottom-icon', function() {
 					events.openNewWindowWithData('storage_main.html', {
-						fid: '0', //fid
+						fid: '0', //文件id,顶层0
+						title: '云盘—云存储', //标题名
 						top: fileArray //顶层文件和文件夹的数据
+
 					});
 				});
 
@@ -420,7 +430,7 @@
 							break;
 					}
 				});
-				
+
 				function requestClassData() {
 					var teacherClasses = [];
 					var studentClasses = [];
@@ -447,7 +457,7 @@
 							for(var i in tempArray) {
 								var tempModel = tempArray[i];
 								//2老师
-								if(tempModel.mstype == 2 || tempModel.mstype == 1) {
+								if(tempModel.mstype == 2) {
 									teacherClasses.push(tempArray[i]);
 								}
 								//家长、学生
@@ -460,7 +470,7 @@
 									teacherClasses: teacherClasses,
 									studentClasses: studentClasses
 								})
-							}else{
+							} else {
 								mui.toast('您还未加入班级');
 							}
 						} else {
@@ -482,7 +492,11 @@
 						console.log('26.postDataPro_PostDiFi_用户云盘顶层文件及文件夹获取_RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 						if(data.RspCode == 0) {
 							//给存储数组赋值
-							fileArray = data.RspData;
+							if(data.RspData != null && data.RspData != '') {
+								fileArray = data.RspData;
+							} else {
+								fileArray = [];
+							}
 							//清掉所有文件夹
 							var table = document.getElementById("cloudstoragefile");
 							table.innerHTML = '';
